# Obsidium

./: .gitignore  Cargo.toml
src/: lib.rs
src/data/: mod.rs  registry_data.json
src/protocol/packets/: configuration.rs  login.rs
src/server/: minecraft.rs
tests/: registry_test.rs
