[package]
name = "obsidium"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/OmarAfet/obsidium"
homepage = "https://github.com/OmarAfet/obsidium"
description = "A high-performance Minecraft server written in Rust."
license = "MIT"
authors = ["Omar Afet"]
keywords = ["minecraft", "server", "game", "protocol", "network"]
categories = ["games", "network-programming"]
readme = "README.md"
rust-version = "1.87.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "time",
    "env-filter",
] }
tracing-core = "0.1.34"
time = { version = "0.3", features = ["formatting", "macros"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
fastnbt = "2.5"
lazy_static = "1.4"
